--- a/p-portfolio.html
+++ b/p-portfolio.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="p-potfolio.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://kit.fontawesome.com/45fbaa9681.js" crossorigin="anonymous"></script>
     </head>
     <body>
